--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 			</main>
 			<footer class="footer">
 				<div class="todo-count">Things left to do: <span class="todo-number">0</span></div>
-				<button id="clear-all" class="btn-clear-all">Clear All</button>
+				<div class="footer__btns">
+					<button id="clear-all" class="btn-clear-all">Clear All</button>
+					<button id="clear-completed" class="btn-clear-completed">Clear completed</button>
+				</div>
 			</footer>
 		</div>
 
-		<script src="Sortable.min.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
