Fix footer buttons classname

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<button id="active-tasks" class="btn-active-tasks btn-filter">Active</button>
 					<button id="completed-tasks" class="btn-completed-tasks btn-filter">Completed</button>
 				</div>
-				<div class="footer__btns">
+				<div class="footer-btns">
 					<button id="clear-all" class="btn-clear-all btn-footer">Clear All</button>
 					<button id="clear-completed" class="btn-clear-completed btn-footer">Clear completed</button>
 				</div>
